# pokespear

./: .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  app.py  conftest.cfg  docker-compose.yml  setup.cfg  setup.py
src/pokespear/: __init__.py  app.py  command_line.py  common.py
tests/: test_dummy.py
tests/functional/: conftest.py  test_app.py  test_pokespear.py
tests/unit/: test_commandline.py  test_common.py  test_pokespear.py
