[metadata]
name = pokespear
url = https://github.com/danielbrownridge/pokespear
author = Daniel Brownridge
author_email = daniel@freshnewpage.com
description = Show Shakesperan description of Pokémon.

[tool:pytest]
addopts =
    --flake8
    --mypy
    --pylint
testpaths =
    src
    tests

[mypy]
strict = True

[mypy-pytest.*]
ignore_missing_imports = True
