[metadata]
name = pokespear
url = https://github.com/danielbrownridge/pokespear
author = Daniel Brownridge
author_email = daniel@freshnewpage.com
description = Show Shakesperan description of Pokémon.

[options]
packages = find:
package_dir =
    = src
setup_requires =
    setuptools_scm

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pokespear = pokespear.command_line:main

[tool:pytest]
addopts =
    --flake8
    --mypy
    --pylint
testpaths =
    src
    tests

[mypy]
strict = True

[mypy-pytest.*]
ignore_missing_imports = True
